Mon May 17 00:07:00 2004  Gavin Sinclair <gsinclair@soyabean.com.au>

	* lib/drb/drb.rb: Cosmetic documentation changes.

Sun May 16 20:55:49 2004  Tanaka Akira  <akr@m17n.org>

	* ext/dbm/dbm.c (fdbm_initialize): accept optional 3rd argument to
	  specify an open flag.
	  (Init_dbm): define open flags: DBM::READER, DBM::WRITER, DBM::WRCREAT
	  and DBM::NEWDB.

Sat May 15 17:52:24  Hirokazu Yamamoto  <ocean@m2.ccsnet.ne.jp>

	* test/ruby/test_float.rb(test_strtod): Add test for signed 0.000...1

Sat May 15 14:20:13 2004  WATANABE Hirofumi  <eban@ruby-lang.org>

	* ext/syck/depend: add ruby's headers.

Sat May 15 13:38:33 2004  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* ext/syck/MANIFEST, ext/syck/depend: new file.

	* lib/yaml/rubytypes.rb: range of exponential floats.  [ruby-core:02824]

	* test/yaml/test_yaml.rb: tests for strings start with colon and some
	  round trip.

Sat May 15 12:04:58 2004  why the lucky stiff  <why@ruby-lang.org>

	* lib/yaml.rb: removed fallback to pure Ruby parser.

	* lib/yaml/baseemitter.rb (node_text): rewriting folded scalars.

	* ext/syck/syck.h: reports style of scalars now, be they plain, block
	  single-, or double-quoted.

	* ext/syck/syck.c: ditto.

	* ext/syck/gram.c: ditto.

	* ext/syck/node.c: ditto.

	* ext/syck/token.c: ditto.

	* ext/syck/rubyext.c (yaml_org_handler): symbols loaded only
	  if scalar style is plain.

	* test/yaml/test_yaml.rb (test_perl_regexp): updated test to
	  match new regexp serialization.

Sat May 15 01:41:34 2004  Yukihiro Matsumoto  <matz@ruby-lang.org>

	* eval.c (eval): forgot to restore $SAFE value before evaluating
	  compiled node.  [ruby-core:02872]

Sat May 15 01:33:12 2004  Yukihiro Matsumoto  <matz@ruby-lang.org>

	* range.c (range_each_func): terminates loop if generating value
	  is same to @end.  [ruby-talk:100269]

Fri May 14 22:08:38 2004  Yukihiro Matsumoto  <matz@ruby-lang.org>

	* string.c (rb_str_new4): should not reuse frozen shared string if